--- a/scss/_page-match.scss
+++ b/scss/_page-match.scss
@@ -1139,6 +1139,7 @@
     @include mq(max_md) {
       max-width: 90vw;
       overflow: scroll;
+      padding-bottom: 8px;
     }
   }
 
@@ -1578,9 +1579,7 @@
     .club-image {
       min-width: 40px;
       max-width: 40px;
-      ;
       height: 40px;
-      ;
       border-radius: 50%;
       object-fit: cover;
       margin-right: 16px;
@@ -1706,6 +1705,22 @@
 
     @include mq(max_md) {
       visibility: visible;
+    }
+  }
+
+}
+
+.club-page-wrapper {
+  .common-match-list-timeline {
+    margin-bottom: 32px;
+
+    @include mq(max_md) {
+      margin-bottom: 24px;
+    }
+     .middle-column {
+      .club-name {
+        max-width: 180px !important;
+      }
     }
   }
 }
