--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1514,6 +1514,14 @@ li {
 			}
 		}
 
+		.header-club-column {
+			width: 50%;
+
+			@include mq(max_md) {
+				width: 100%;
+			}
+		}
+
 		.image-league {
 			min-width: 80px;
 			max-width: 80px;
@@ -1782,6 +1790,9 @@ li {
 
 			@include mq(max_md) {
 				padding-left: 12px !important;
+				max-width: 90vw;
+				overflow-x: scroll;
+				padding-bottom: 8px;
 			}
 		}
 	}
@@ -2202,6 +2213,17 @@ li {
 			}
 		}
 
+		.league-column {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			max-width: 170px;
+
+			@include mq(max_md) {
+				display: none;
+			}
+		}
+
 		.middle-column {
 			flex-grow: 1;
 			display: flex;
@@ -2475,6 +2497,7 @@ li {
 			overflow: hidden;
 			text-overflow: ellipsis;
 			max-width: 450px;
+
 			@include mq(max_md) {
 				max-width: 180px;
 			}
@@ -2490,6 +2513,7 @@ li {
 	justify-content: flex-end;
 	align-items: center;
 	margin-top: 24px;
+
 	@include mq(max_md) {
 		margin-top: 12px;
 	}
@@ -2547,12 +2571,13 @@ li {
 
 .content-tab-only-for-mobile {
 	display: none;
+
 	@include mq(max_md) {
 		display: block
 	}
 }
 
-.statis-nav-for-mobile  {
+.statis-nav-for-mobile {
 	li {
 		width: 100%;
 		display: flex;
@@ -2580,4 +2605,249 @@ li {
 
 .stats-detail-wrapper {
 	padding-top: 24px;
+}
+
+.common-league-stading-table {
+	width: 100%;
+
+	.column-10 {
+		width: 10%;
+	}
+
+	.column-70 {
+		width: 70%;
+		padding-left: 12px;
+	}
+
+	.column-20 {
+		width: 20%;
+	}
+
+	.table-heading {
+		padding: 10px;
+		background: #EDF2F7;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 11px;
+		line-height: 13px;
+		/* identical to box height */
+		display: flex;
+
+
+		/* Gray:600 */
+
+		color: #718096;
+		border-bottom: none;
+		;
+	}
+
+
+	.table-footer {
+		padding: 10px 0px 0px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 17px;
+		color: #3AC5C9;
+		cursor: pointer;
+	}
+
+	.table-row {
+		padding: 8px 10px;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 14px;
+		text-align: center;
+		display: flex;
+		align-items: center;
+
+		/* Gray:900 */
+
+		border-bottom: 1px solid #EDF2F7;
+		;
+		color: #1A202C;
+	}
+
+	.active {
+		background-color: rgba(58, 197, 201, 0.1);
+		color: #3AC5C9;
+	}
+
+	.club-wrapper {
+		display: flex;
+		align-items: center;
+
+		.club-image {
+			min-width: 24px;
+			max-width: 24px;
+			height: 24px;
+			object-fit: cover;
+			margin-right: 10px;
+
+			@include mq(max_md) {
+				margin-right: 8px;
+			}
+		}
+
+		.club-name {
+			max-width: 120px;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			display: inline-block;
+
+			@include mq(max_md) {
+				max-width: 100px;
+			}
+
+		}
+	}
+}
+
+.common-club-matches-table {
+	.table-heading {
+		display: flex;
+		background: #EDF2F7;
+		padding: 12px 16px;
+		justify-content: space-between;
+
+		.heading-column {
+			width: calc(100% / 3);
+			display: flex;
+			align-items: center;
+			font-style: normal;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 17px;
+			color: #1A202C;
+			cursor: pointer;
+		}
+	}
+
+}
+
+.common-club-stats-table {
+	margin-bottom: 32px;
+
+	.table-heading {
+		padding: 12px 0px;
+		display: flex;
+		align-items: center;
+		background: #EDF2F7;
+
+		font-style: normal;
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 14px;
+		text-align: center;
+		color: #718096 !important;
+		border-bottom: none;
+	}
+
+	.table-footer {
+		border-top: 1px solid #E2E8F0;
+		border-bottom: none !important;
+	}
+
+	.list-score {
+		display: flex;
+		align-items: center;
+
+		.score {
+			min-width: 24px;
+			max-width: 24px;
+			height: 24px;
+			border: none;
+			border-radius: 4px;
+			font-style: normal;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 17px;
+			color: #FFFFFF;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			margin-right: 6px;
+
+			&:last-of-type {
+				margin-right: 0;
+			}
+		}
+
+		.score-danger {
+			background: #E53E3E;
+		}
+
+		.score-default {
+			background-color: none;
+			border: none;
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 17px;
+			color: #1A202C;
+		}
+
+		.score-warning {
+			background: #F59D35;
+			border-radius: 4px;
+		}
+	}
+
+	.table-row {
+		display: flex;
+		align-items: center;
+		padding: 10px;
+
+		font-style: normal;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 17px;
+		color: #1A202C;
+		border-bottom: 1px solid #E2E8F0;
+	}
+
+	.column-40 {
+		width: 40%;
+	}
+
+
+	.column-10 {
+		width: 10%;
+		display: flex;
+	}
+
+
+	.club-wrapper {
+		display: flex;
+		align-items: center;
+
+		.club-image {
+			min-width: 30px;
+			max-width: 30px;
+			height: 30px;
+			object-fit: cover;
+			border-radius: 50%;
+			margin-right: 16px;
+		}
+
+		.club-name {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			max-width: 300px;
+		}
+	}
+}
+
+.txt-line {
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 17px;
+	color: #1A202C;
+	margin-bottom: 8px;
+	;
 }
